Fix table input cell overflow

--- a/frontend/src/assets/styles/components/input.css
+++ b/frontend/src/assets/styles/components/input.css
@@ -27,3 +27,7 @@
 .rsprd-input--s {
   width: 100px;
 }
+
+.rsprd-input--edit {
+  width: 100%;
+}
